tests/baselines/reference/parserES5ForOfStatement21.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts(1,1): error TS2482: For-of statements are only available when targeting ECMAScript 6 or higher
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts(1,9): error TS1123: Variable declaration list cannot be empty.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts (2 errors) ====
    for (var of of) { }
    ~~~
!!! error TS2482: For-of statements are only available when targeting ECMAScript 6 or higher
            
!!! error TS1123: Variable declaration list cannot be empty.